# delivery-robo

./: .gitignore  readme.md
firmware/: readme.md  test_serial.py
firmware/motor-controller/: platformio.ini
firmware/motor-controller/include/: commands.h  encoder_driver.h  motor_driver.h
firmware/motor-controller/src/: encoder_driver.cpp  main.cpp  motor_driver.cpp
firmware/sketch_oct18b/: sketch_oct18b.ino
firmware/src/: arduino_comms.cpp
sim/: .gitignore
sim/src/hardware_interface/: CMakeLists.txt  package.xml
sim/src/robo_courier/config/: my_controllers.yaml
sim/src/robo_courier/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro
sim/src/robo_courier/launch/: launch_sim.launch.py
sim/src/robo_courier/worlds/: apartmentswag.world
sim/src/twist_to_twiststamped/: CMakeLists.txt  package.xml
sim/src/twist_to_twiststamped/include/twist_to_twiststamped/: twist_to_twiststamped.hpp
sim/src/twist_to_twiststamped/src/: twist_to_twiststamped.cpp
